--- a/0.2.0/manifest.json
+++ b/0.2.0/manifest.json
@@ -1,9 +1,9 @@
 {
   "polymod": {
-    "name": "Trajectory Viz + Minimap + Dynamic Racing Line",
-    "id": "racing-viz-minimap-mod",
+    "name": "Minimap Trajectory + Track Racing Line",
+    "id": "racing-viz-mod",
     "author": "PlaneCrashColin",
-    "targets": ["0.5.2"],
+    "targets": ["0.5.0", "0.5.1", "0.5.2"],
     "main": "main.mod.js"
   },
   "dependencies": []
